--- a/content/projects/abflags.mdx
+++ b/content/projects/abflags.mdx
@@ -1,17 +1,14 @@
 ---
-title: Virtual Study Group Platform
-description: A platform where students can form virtual study groups, schedule sessions, and share resources in real-time.
+title: A Open Source Feature Flagging and A/B Testing
+description: Open Source Feature Flagging and A/B Testing. Alternative for Unleash, Flagr, and Growthbook
 date: 2024-05-26
-website: https://example.com/
-github: https://github.com/
+website: https://github.com/tecklens/abflags/
+github: https://github.com/tecklens/abflags/
 tags:
-  - label: HTML
-  - label: CSS
-  - label: JavaScript
-  - label: React
-  - label: Node.js
-  - label: Socket.IO
-  - label: MongoDB
+  - label: TypeScript
+  - label: Reactjs
+  - label: Nestjs
+  - label: MariaDB
 ---
 
 This platform allows students to form virtual study groups, schedule sessions, and share resources in real-time. The idea behind this project was to provide a collaborative environment for students to study together, even when they are physically apart. Working on this project helped me understand real-time communication and the importance of user experience in a collaborative tool.
