--- a/content/projects/all_in_one.mdx
+++ b/content/projects/all_in_one.mdx
@@ -1,17 +1,17 @@
 ---
-title: Eco-friendly Product Marketplace
-description: An e-commerce platform dedicated to eco-friendly products where users can buy, sell, and learn about sustainable living.
+title: AIO - All in one
+description: AIO - E-commerce software, home appliance repair services and community building advice.
 date: 2024-05-26
-website: https://example.com/
-github: https://github.com/
+website: https://play.google.com/store/apps/details?id=com.viettel.aioapp/
 tags:
-  - label: HTML
-  - label: CSS
-  - label: JavaScript
-  - label: React
-  - label: Node.js
-  - label: Express
+  - label: Flutter
+  - label: Spring Boot
+  - label: Kafka
+  - label: Dart
+  - label: Flutter
+  - label: Java
   - label: MongoDB
+  - label: Redis
 ---
 
 This is an e-commerce platform dedicated to eco-friendly products where users can buy, sell, and learn about sustainable living. The goal of this project was to promote sustainable living by providing a marketplace for eco-friendly products. Working on this project helped me understand the intricacies of e-commerce development and the importance of sustainability in business.
