--- a/content/projects/vcs_express.mdx
+++ b/content/projects/vcs_express.mdx
@@ -1,9 +1,8 @@
 ---
-title: Personal Portfolio Website
-description: A personal portfolio to showcase your coding projects, resume, and skills in a beautifully designed format.
+title: VCS Express
+description: Global e-commerce shipping (USA, Canada).
 date: 2024-05-26
-website: https://example.com/
-github: https://github.com/
+website: https://vcs.express/
 tags:
   - label: HTML
   - label: CSS
