--- a/content/projects/the_only_biz.mdx
+++ b/content/projects/the_only_biz.mdx
@@ -1,16 +1,16 @@
 ---
-title: Interactive Coding Tutorial Site
-description: A website offering interactive coding tutorials and challenges to help users learn programming languages through practice.
+title: Discover, collect, and sell extraordinary NFTs
+description: TheOnly.biz - is a premier decentralized NFT platform, developed by TrustKeys Network
 date: 2024-05-26
-website: https://example.com/
-github: https://github.com/
+website: https://theonly.biz/
 tags:
   - label: HTML
   - label: CSS
   - label: JavaScript
   - label: React
-  - label: Node.js
-  - label: MongoDB
+  - label: Nextjs
+  - label: Golang
+  - label: BSC
 ---
 
 This is a website offering interactive coding tutorials and challenges to help users learn programming languages through practice. The idea was to create a hands-on learning environment where users can improve their coding skills by solving challenges. This project enhanced my ability to create educational content and interactive web applications.
