--- a/content/projects/trustkeys.mdx
+++ b/content/projects/trustkeys.mdx
@@ -1,16 +1,13 @@
 ---
-title: Fitness Tracker App
-description: A mobile app that helps users track their fitness activities, set goals, and monitor progress with motivational tools.
+title: TrustKeys NFT Crypto SuperApp
+description: Secured Wallet, Exchange, Messaging and More
 date: 2024-05-26
-website: https://example.com/
-github: https://github.com/
+website: https://trustkeys.network/
 tags:
-  - label: HTML
-  - label: CSS
-  - label: JavaScript
   - label: React Native
-  - label: Node.js
-  - label: MongoDB
+  - label: Golang
+  - label: Thrift
+  - label: Crypto Wallet
 ---
 
 This is a mobile app that helps users track their fitness activities, set goals, and monitor progress with motivational tools. I created this app to encourage people to lead a healthier lifestyle by making fitness tracking simple and engaging. The project allowed me to delve into mobile development and learn more about user-centered design and data management.
